Fix style issues: color of links in header, fonts appearing in banner svg, text-decoration of certain links, overflow right on safari

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -211,10 +211,10 @@ html {
 }
 
 .slant {
-  width: 120%;
+  width: 100%; /*120%;*/
   height: 90px;
   position: absolute;
-  left: -20px;
+  left: 0px; /* -20px;*/
   background: inherit;
   z-index: 1;
 }
@@ -280,6 +280,10 @@ html {
   margin-bottom: 10px
 }
 
+#nav.active a {
+  color: rgb(255, 188, 108);
+}
+
 #nav-close {
   display: none;
 }
@@ -312,11 +316,12 @@ html {
   text-decoration: none;
   border: none;
   padding: 0;
+  color: rgb(255, 255, 255);
 }
 
 .nav-section a:hover, .button a:hover, #social a:hover {
   background-color: initial;
-  color: inherit;
+  color: rgb(255, 255, 255);
 }
 
 .nav-section.active {
@@ -519,7 +524,8 @@ html {
 
 .button.apply {
   padding: 12px 25px;
-  font-size: 24px
+  font-size: 24px;
+  text-decoration: none;
 }
 
 /* sponsor */
